lista de items es LinkedList